--- a/css/variables.css
+++ b/css/variables.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
 
 :root {
-	--soft-red: hsl(7, 99%, 70%);
-	--yellow: hsl(51, 100%, 49%);
-	--dark-saturated-cyan: hsl(167, 40%, 24%);
-	--dark-moderate-cyan: hsl(168, 34%, 41%);
-	--dark-blue: hsl(198, 62%, 26%);
+  --soft-red: hsl(7, 99%, 70%);
+  --yellow: hsl(51, 100%, 49%);
+  --dark-desaturated-cyan: #25564b;
+  --dark-moderate-cyan: hsl(168, 34%, 41%);
+  --dark-blue: hsl(198, 62%, 26%);
 
-	--very-dark-saturated-blue: hsl(212, 27%, 19%);
-	--very-dark-grayish-blue: hsl(213, 9%, 39%);
-	--dark-grayish-blue: hsl(232, 10%, 55%);
-	--grayish-blue: hsl(210, 4%, 67%);
+  --very-dark-saturated-blue: hsl(212, 27%, 19%);
+  --very-dark-grayish-blue: hsl(213, 9%, 39%);
+  --dark-grayish-blue: hsl(232, 10%, 55%);
+  --grayish-blue: hsl(210, 4%, 67%);
 
-	--normal-font-size: 18px;
-	--title-font: 'Fraunces', sans-serif;
-	--content-font: 'Barlow', sans-serif;
+  --normal-font-size: 18px;
+  --title-font: "Fraunces", sans-serif;
+  --content-font: "Barlow", sans-serif;
 }
